--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "web": "expo start --web",
     "eject": "expo eject"
   },
-  "dependencies": {
-    "expo": "~45.0.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "dependencies": {
+      "axios": "0.19.2",
+      "firebase": "8.2.3",
+      "expo-constants": "~13.0.2",
+      "react-navigation": "4.0.10",
+      "@expo/vector-icons": "^12.0.0",
+      "react-native-paper": "4.9.2",
+      "@react-navigation/native": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
